fix project-menu height on mobile

--- a/css/site.styl
+++ b/css/site.styl
@@ -246,11 +246,9 @@ a:visited
 // BASIC
   
 html
-  height: 100%
   color: $color-black
   
 body
-  height: 100%
   background-color: $color-white
 
 img
@@ -411,6 +409,8 @@ p.wp-caption-text
 #projects-menu
   width: 75%
   height: 100%
+  width: 75vw
+  height: 100vh
   
 #sort-menu
   width: 100%
